# backend/app.py
@@ -12,7 +12,7 @@ CORS(app)
 
 # Initialize connection to firebase
 pb = pyrebase.initialize_app(json.load(open('backend/fbconfig.json')))
-auth1 = pb.auth()
+authCnx = pb.auth()
 
 # Admin SDK
 cred = credentials.Certificate(json.load(open('backend/fbAdminConfig.json')))
@@ -22,20 +22,15 @@ def userId_required(f):
     @wraps(f)
     def decorated(*args, **kwargs):
 
-        token = None
-        if 'Authorization' in request.headers:
+        try:
             token = request.headers['Authorization']
-            try:
-                token = token.split(' ').pop()
-                decoded_token = auth.verify_id_token(token) 
-            except:
-                return Response(status=401)
-        
-        if not token:
+            token = token.split('Bearer ')[1]
+        except:
             return Response(status=401)
 
         # Obtaining userID using token
         try:
+            decoded_token = auth.verify_id_token(token) 
             userId = decoded_token['uid']
         except:
             return Response(status=401)
@@ -48,38 +43,53 @@ def userId_required(f):
 
 # Index
 @app.route('/')
+@userId_required
 def index():
-    return "Index"
+    return "Works"
 
-# route to sign a new user up  
+# NEW USER GIVEN USERID
 @app.route('/signup', methods=["POST"])
-def signup():
-    if request.method:
-        email = request.form["signup_email"]
-        password = request.form["signup_password"]
-        try:
-            user = auth1.create_user_with_email_and_password(email, password)
-        except:
-            return Response(status=401)
-    return Response(status=200)
+def addUser():
 
+    try:
+        email = request.form["email"]
+        password = request.form["password"]
+    except:
+        return Response(status=400)
+
+    try:
+        user = authCnx.create_user_with_email_and_password(email, password)
+    except:
+        return Response(status=401)
+
+    return json.dumps({'idToken':user['idToken']})
+
+# LOGIN ROUTE
 @app.route('/login', methods=["POST"])
 def login():
-    if request.method:
-        email = request.form["login_email"]
-        password = request.form["login_password"]
-        try:
-            user = auth1.sign_in_with_email_and_password(email, password)
-            user = auth1.refresh(user['refreshToken'])
-            user_id = user['idToken']
-        except:
-            return Response(status=400)
-    return Response(status=200)
 
-@app.route('/home')
+    try:
+        email = request.form["email"]
+        password = request.form["password"]
+    except:
+        return Response(status=400)
+
+    try:
+        user = authCnx.sign_in_with_email_and_password(email, password)
+        user = authCnx.refresh(user['refreshToken'])
+    except:
+        return Response(status=401)
+
+    return json.dumps({'idToken':user['idToken']})
+
+# LOGOUT ROUTE
+@app.route('/logout', methods=["GET"])
 @userId_required
-def home():
-    pass
+def logout(authDict):
+
+    userId = authDict.get('userId')
+    auth.revoke_refresh_tokens(userId)
+    return Response(status=200)
 
 if __name__ == "__main__":
     app.run(debug=True)
